--- a/README.Rmd
+++ b/README.Rmd
@@ -35,3 +35,25 @@ or from [r-universe](https://poissonconsulting.r-universe.dev/flobr).
 ```r
 install.packages("flobr", repos = c("https://poissonconsulting.r-universe.dev", "https://cloud.r-project.org"))
 ```
+
+## Demonstration
+
+```{r}
+library(envirotox)
+library(ssdtools)
+library(dplyr)
+library(tidyr)
+
+data <- envirotox::yanagihara_24_chronic |>
+  dplyr::nest_by(Chemical) %>%
+  dplyr::mutate(ssd_fit = list(ssd_fit_dists(data, silent = TRUE)),
+                ssd_hc = list(ssd_hc(ssd_fit, average = FALSE))) %>%
+  tidyr::unnest(ssd_hc)
+
+print(data)
+
+data |>
+  dplyr::group_by(dist) %>%
+  dplyr::summarise(wt = mean(wt), .groups = "drop") %>%
+  dplyr::arrange(desc(wt))
+```
