--- a/README.Rmd
+++ b/README.Rmd
@@ -40,13 +40,21 @@ library(ssdtools)
 library(dplyr)
 library(tidyr)
 
-data <- envirotox::yanagihara_24_acute |>
-  dplyr::nest_by(Chemical) |>
-  dplyr::mutate(ssd_fit = list(ssd_fit_dists(data, silent = TRUE)),
-                ssd_hc = list(ssd_hc(ssd_fit, average = FALSE))) |>
-  tidyr::unnest(ssd_hc)
+data <- envirotox::yanagihara_24_acute
 
-print(data)
+data |>
+  count(Chemical) |>
+  pull(n) |>
+  summary() |>
+  print()
+
+data <- data |>
+  dplyr::nest_by(Chemical) |>
+  dplyr::mutate(n = nrow(data), 
+                ssd_fit = list(ssd_fit_dists(data, silent = TRUE)),
+                ssd_hc = list(ssd_hc(ssd_fit, average = FALSE))) |>
+  tidyr::unnest(ssd_hc) |>
+  print()
 
 data |>
   dplyr::group_by(Chemical) |>
