--- a/vignettes/articles/yanagihara-24.Rmd
+++ b/vignettes/articles/yanagihara-24.Rmd
@@ -32,16 +32,15 @@ wt_model <- function(x) {
 }
 ```
 
-```{r acute}
+```{r acute_custom_filtered}
 dists <- c("lnorm", "llogis", "burrIII3", "weibull")
 
 data <- envirotox::yanagihara_24_acute |>
   dplyr::filter(BC <= 0.555) |>
   dplyr::nest_by(Chemical) |>
-  dplyr::mutate(n = nrow(data), 
-                ssd_fit = list(ssd_fit_dists(data, dists = dists, at_boundary_ok = FALSE, computable = TRUE, silent = TRUE))) |>
+  dplyr::mutate(ssd_fit = list(ssd_fit_dists(data, silent = TRUE)),
+                ssd_hc = list(ssd_hc(ssd_fit, average = FALSE))) |>
   # dplyr::filter(hasName(ssd_fit, "burrIII")) |>
-  dplyr::mutate(ssd_hc = list(ssd_hc(ssd_fit, average = FALSE))) |>
   tidyr::unnest(ssd_hc)
 
 data |> 
@@ -53,15 +52,14 @@ data |>
   print()
 ```
 
-```{r acute default}
+```{r acute_default_filtered}
 
 data <- envirotox::yanagihara_24_acute |>
   dplyr::filter(BC <= 0.555) |>
   dplyr::nest_by(Chemical) |>
-  dplyr::mutate(n = nrow(data), 
-                ssd_fit = list(ssd_fit_dists(data, silent = TRUE))) |>
+  dplyr::mutate(ssd_fit = list(ssd_fit_dists(data, silent = TRUE)),
+                ssd_hc = list(ssd_hc(ssd_fit, average = FALSE))) |>
   # dplyr::filter(hasName(ssd_fit, "burrIII")) |>
-  dplyr::mutate(ssd_hc = list(ssd_hc(ssd_fit, average = FALSE))) |>
   tidyr::unnest(ssd_hc)
 
 data |> 
@@ -73,14 +71,12 @@ data |>
   print()
 ```
 
-```{r acute default no filter}
+```{r acute_default}
 
 data <- envirotox::yanagihara_24_acute |>
   dplyr::nest_by(Chemical) |>
-  dplyr::mutate(n = nrow(data), 
-                ssd_fit = list(ssd_fit_dists(data, silent = TRUE))) |>
-  # dplyr::filter(hasName(ssd_fit, "burrIII")) |>
-  dplyr::mutate(ssd_hc = list(ssd_hc(ssd_fit, average = FALSE))) |>
+  dplyr::mutate(ssd_fit = list(ssd_fit_dists(data, silent = TRUE)),
+                ssd_hc = list(ssd_hc(ssd_fit, average = FALSE))) |>
   tidyr::unnest(ssd_hc)
 
 data |> 
